added quote and call to action

--- a/index.html
+++ b/index.html
@@ -61,10 +61,17 @@
             </div>
         </div>
         <div class="box2">
-
-        </div>
+                <div class="quote">Stay away from those people who try to disparage your ambitions. Small minds will always do that, but great minds will give you a feeling that you can become great too.</div>
+                <div class="quoteby">- Mark Twain</div>
+            </div>
         <div class="box3">
-
+                <div class="blueback">
+                    <div class="calltoaction">
+                        <div class="ctaText">Call to action! It's Time!</div>
+                        <div class="ctaDesc">Sign up for our product by clicking that button right over there!</div>
+                    </div>
+                    <button class="ctaButton">Sign up</button>
+                </div>
         </div>
     </div>
     <div class="Footer">
